# Signet

./: .clang-format  .clangd  .cmake-format.json  .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE.md  audio_utils.sublime-project  flake.nix  justfile  signet.sublime-project  signet_win32.manifest
.github/workflows/: build_and_test.yml  cmake.yml  release_generator.yml
code/audio_utils/fader/: fader.cpp  fader.h  main.cpp
code/audio_utils/normalise/: gain_calculators.cpp  gain_calculators.h  main.cpp  normaliser.cpp  normaliser.h
code/audio_utils/offset_start_to_zero_crossing/: main.cpp  zcross_offsetter.h
code/common/: audio_data.cpp  audio_data.h  audio_duration.cpp  audio_duration.h  audio_file.cpp  audio_file.h  audio_file_io.cpp  audio_file_io.h  audio_files.cpp  audio_files.h  audio_util_interface.cpp  audio_util_interface.h  backup.cpp  backup.h  cereal_optional.hpp  common.cpp  common.h  defer.h  defs.h  drwav_tests.cpp  edit_tracked_audio_file.h  expected_midi_pitch.cpp  expected_midi_pitch.h  filepath_set.cpp  filepath_set.h  filter.cpp  filter.h  flac_decoder.h  gain_calculators.cpp  gain_calculators.h  identical_processing_set.cpp  identical_processing_set.h  input_files.cpp  input_files.h  metadata.h  midi_pitches.cpp  midi_pitches.h  pathname_expansion.cpp  pathname_expansion.h  string_utils.cpp  (+2 more)
code/signet/: audio_util_interface.cpp  audio_util_interface.h  backup.cpp  backup.h  cli_formatter.h  command.h  input_files.h  pathname_expansion.cpp  pathname_expansion.h  signet_interface.cpp  signet_interface.h  signet_main.cpp  subcommand.h  subcommand_processor.h  version.h.in
code/signet-gen/: sample_blender.cpp  sample_blender.h  signet_gen_interface.cpp  signet_gen_interface.h  signet_gen_main.cpp
code/signet/commands/add_loop/: add_loop.cpp  add_loop.h
code/signet/commands/auto_tune/: auto_tune.cpp  auto_tune.h
code/signet/commands/convert/: convert.cpp
code/signet/commands/detect_duplicates/: detect_duplicates.cpp  detect_duplicates.h
code/signet/commands/detect_pitch/: detect_pitch.cpp  detect_pitch.h
code/signet/commands/detect_pops/: detect_pops.cpp  detect_pops.h
code/signet/commands/embed_sampler_info/: embed_sampler_info.cpp  embed_sampler_info.h
code/signet/commands/fade/: fade.cpp  fade.h
code/signet/commands/filter/: filters.cpp  filters.h
code/signet/commands/fix_pitch_drift/: fix_pitch_drift_command.cpp  fix_pitch_drift_command.h  pitch_drift_corrector.cpp  pitch_drift_corrector.h
code/signet/commands/folderise/: folderise.cpp  folderise.h
code/signet/commands/gain/: gain.cpp  gain.h
code/signet/commands/metadata/: metadata_command.cpp  metadata_command.h
code/signet/commands/mir_report/: mir_analysis.cpp  mir_analysis.h  mir_report.cpp  mir_report.h
code/signet/commands/move/: move.cpp  move.h
code/signet/commands/normalise/: normalise.cpp  normalise.h
code/signet/commands/pan/: pan.cpp  pan.h
code/signet/commands/print_info/: print_info.cpp  print_info.h
code/signet/commands/realtime_auto_tune/: realtime_auto_tune.cpp  realtime_auto_tune.h
code/signet/commands/remove_silence/: remove_silence.cpp  remove_silence.h
code/signet/commands/rename/: auto_mapper.cpp  auto_mapper.h  note_to_midi.cpp  note_to_midi.h  rename.cpp  rename.h  rename_substitutions.cpp  rename_substitutions.h
code/signet/commands/reverse/: reverse.cpp  reverse.h
code/signet/commands/sample_blend/: sample_blend.cpp  sample_blend.h
code/signet/commands/seamless_loop/: seamless_loop.cpp  seamless_loop.h
code/signet/commands/trim/: trim.cpp  trim.h
code/signet/commands/trim_silence/: remove_silence.cpp  trim_silence.cpp  trim_silence.h
code/signet/commands/tune/: tune.cpp  tune.h
code/signet/commands/zcross_offset/: zcross_offset.cpp  zcross_offset.h
code/signet/subcommands/auto_tune/: auto_tune.cpp  auto_tune.h
code/signet/subcommands/auto_tuner/: auto_tuner.cpp  auto_tuner.h
code/signet/subcommands/convert/: convert.cpp  convert.h
code/signet/subcommands/converter/: converter.cpp  converter.h
code/signet/subcommands/detect_pitch/: detect_pitch.cpp  detect_pitch.h
code/signet/subcommands/embed_sampler_info/: embed_sampler_info.cpp  embed_sampler_info.h
code/signet/subcommands/fade/: fade.cpp  fade.h
code/signet/subcommands/fader/: fader.cpp  fader.h
code/signet/subcommands/filter/: filters.cpp  filters.h
code/signet/subcommands/filters/: filters.cpp  filters.h
code/signet/subcommands/folderise/: folderise.cpp  folderise.h
code/signet/subcommands/folderiser/: folderiser.cpp  folderiser.h
code/signet/subcommands/gain/: gain.cpp  gain.h
code/signet/subcommands/gainer/: gainer.cpp  gainer.h
code/signet/subcommands/highpass/: highpass.cpp  highpass.h
code/signet/subcommands/info_printer/: info_printer.cpp  info_printer.h
code/signet/subcommands/metadata_printer/: metadata_printer.cpp  metadata_printer.h
code/signet/subcommands/move/: move.cpp  move.h
code/signet/subcommands/mover/: mover.cpp  mover.h
code/signet/subcommands/normalise/: gain_calculators.cpp  gain_calculators.h  normalise.cpp  normaliser.cpp  normaliser.h
code/signet/subcommands/normaliser/: gain_calculators.cpp  gain_calculators.h  normaliser.cpp  normaliser.h
code/signet/subcommands/pitch_detector/: pitch_detector.cpp  pitch_detector.h
code/signet/subcommands/print_info/: print_info.cpp  print_info.h
code/signet/subcommands/remove_silence/: remove_silence.cpp  remove_silence.h
code/tests/: test_helpers.cpp  test_helpers.h  tests_config.h.in  tests_main.cpp
code/third_party_libs/: CLI11.hpp  CLI11_Fwd.hpp  doctest.hpp  dr_wav.h  filesystem.hpp
code/third_party_libs/cereal/: CMakeLists.txt
code/third_party_libs/dywapitchtrack/: dywapitchtrack.c
common/: common.cpp  common.h
docs/: usage.md
normalise/: main.cpp
offset_start_to_zero_crossing/: main.cpp
test_data/: flac_with_comments.flac  flac_with_legacy_optional_metadata.flac  sawtooth_unlooped.flac  test-out.flac  test.flac  white-noise-16-bit-44100-1ch.aif  white-noise-24-bit-44100-2ch.aif  white-noise-8-bit-96000-1ch.aif
(+54 files in other folders)
